fix: update configs to work with newer version of hydra

--- a/moai/conf/model/monads/distribution/center_of_mass.yaml
+++ b/moai/conf/model/monads/distribution/center_of_mass.yaml
@@ -1,4 +1,4 @@
-# @package model.monads._name_
+# @package model.monads.center_of_mass
 
 _target_: moai.monads.distribution.CenterOfMass
 mode: default # one of ['default', 'default_optimized_2d']
