fix: remove redundant work after merging

--- a/moai/conf/examples/MNIST/model.yaml
+++ b/moai/conf/examples/MNIST/model.yaml
@@ -64,8 +64,9 @@ model:
       monitor:
         fit:
           batch:
-            frequency: 1
-            steps: []
+            train_encoder:
+              frequency: 1
+              steps: []
             # metrics:
               # - train_loss
             # tensors:
