feat: add mnist example for fit, test & serve actions
-- add config files for mnist example
-- add serve handlers
-- add predict step in core model
-- add mnist dataset and augmentations
-- add simple mnsit encoder
-- update base serve handler for inference

--- a/moai/conf/engine/serve/handlers/input/image_file.yaml
+++ b/moai/conf/engine/serve/handlers/input/image_file.yaml
@@ -1,4 +1,4 @@
-# @package handlers.preprocess._name_
+# @package handlers.preprocess.image_file
 
 _target_: moai.serve.handlers.ImageFileInput
 input_key: color
