--- a/moai/conf/engine/checkpoint/lightning/default.yaml
+++ b/moai/conf/engine/checkpoint/lightning/default.yaml
@@ -1,4 +1,4 @@
-# @package trainer.checkpoint
+# @package fitter.checkpoint
 
 _target_: pytorch_lightning.callbacks.ModelCheckpoint
 monitor: ??? # metric to monitor
@@ -8,7 +8,7 @@ mode: min # (PTL 1.5 removed auto) max or min depending on where the metric is a
 #NOTE: @PTRL1.5 period: 1 # number of epochs between checkpoints
 #NOTE: @PTRL1.5 prefix: ${experiment.name}
 save_top_k: 3
-save_last: true                                
+save_last: true
 dirpath: null
 filename: ??? # '{epoch}-{val_loss:.2f}-{other_metric:.2f}'
 auto_insert_metric_name: true
