fix: smplifyx example validation

--- a/moai/conf/examples/smplifyx/metrics.yaml
+++ b/moai/conf/examples/smplifyx/metrics.yaml
@@ -6,6 +6,7 @@ model:
   monitors:
     metrics:
       fit_quality:
+        # frequency: 1
         rmse:
           gt: [keypoints]
           pred: [joints2d]
