--- a/moai/conf/examples/smplifyx/objective.yaml
+++ b/moai/conf/examples/smplifyx/objective.yaml
@@ -342,21 +342,22 @@ model:
         # predict:
         val:
           batch:
-            dataset1: &val
-              metrics: [rmse, fid]
-              steps: [autoencode, sample]
-              termination: []
-              tensors: [show_autoencoded]
-            dataset2:
-              metrics: [rmse]
-              steps: [autoencode]
-              termination: [bad_fit]
-              tensors: [show_autoencoded]
-          epoch:
-            metrics: []
-            steps: [traversal]
-            termination: []
-            tensors: [show_traversals]
+            openpose: 
+          #   dataset1: &val
+          #     metrics: [rmse, fid]
+          #     steps: [autoencode, sample]
+          #     termination: []
+          #     tensors: [show_autoencoded]
+          #   dataset2:
+          #     metrics: [rmse]
+          #     steps: [autoencode]
+          #     termination: [bad_fit]
+          #     tensors: [show_autoencoded]
+          # epoch:
+          #   metrics: []
+          #   steps: [traversal]
+          #   termination: []
+          #   tensors: [show_traversals]
         # test:
       monitor:
         fit:
@@ -379,11 +380,11 @@ model:
                 - fit_quality
               termination: [bad_fit]
           batch:
-            # log_results:
-            frequency: 1
-            # steps: []
-            metrics:
-              - fit_quality
-            tensors:
-              - show_mesh_batch
+            log_results:
+              frequency: 1
+              # steps: []
+              metrics:
+                - fit_quality
+              tensors:
+                - show_mesh_batch
 
