feat: add predict loaders & support tensor monitorign
- add tensor monitoring in predict step
- add predict dataloaders and configuration files
- add image2d simple exporter
 - update mnist example to work with predict and img exporting

--- a/moai/conf/engine/export/exporter/image2d.yaml
+++ b/moai/conf/engine/export/exporter/image2d.yaml
@@ -5,6 +5,6 @@ type: [color] # or depth
 colormap: [none] # bone, etc.
 transform: [none] # minmax, etc.
 mode: overwrite # [all, overwrite]
-image: ???
+keys: ???
 path: ???
 extension: ??? # [png, exr, jpg]
