--- a/moai/conf/model/monads/geometry/distance.yaml
+++ b/moai/conf/model/monads/geometry/distance.yaml
@@ -1,4 +1,4 @@
-# @package model.monads._name_
+# @package model.monads.distance
 
 _target_: moai.supervision.losses.regression.Distance
 mode: default
