--- a/moai/conf/model/monads/geometry/rotation/rotmat_to_rotvec.yaml
+++ b/moai/conf/model/monads/geometry/rotation/rotmat_to_rotvec.yaml
@@ -1,3 +1,3 @@
-# @package model.monads._name_
+# @package model.monads.rotmat_to_rotvec
 
 _target_: moai.monads.geometry.rotations.RotationMatrix2RotationVector
