--- a/moai/conf/model/monads/geometry/rotation/rotvec_to_rotmat.yaml
+++ b/moai/conf/model/monads/geometry/rotation/rotvec_to_rotmat.yaml
@@ -1,3 +1,3 @@
-# @package model.monads._name_
+# @package model.monads.rotvec_to_rotmat
 
 _target_: moai.monads.geometry.rotations.RotationVector2RotationMatrix
