--- a/moai/conf/model/monads/networks/autoencoder.yaml
+++ b/moai/conf/model/monads/networks/autoencoder.yaml
@@ -1,4 +1,4 @@
-# @package model.monads._name_
+# @package model.monads.autoencoder
 
 _target_: moai.monads.networks.autoencoder.AutoEncoder
 checkpoint: ???
