--- a/moai/conf/model/parameters/groups/discriminator.yaml
+++ b/moai/conf/model/parameters/groups/discriminator.yaml
@@ -1,5 +1,5 @@
 # @package model.parameters.groups.discriminator
 
 _target_: moai.parameters.selectors.ModelParameterSelector
-keys:
+modules:
   - discriminator
