--- a/moai/conf/model/parameters/groups/encoder.yaml
+++ b/moai/conf/model/parameters/groups/encoder.yaml
@@ -1,5 +1,5 @@
 # @package model.parameters.selectors.encoder
 
 _target_: moai.parameters.selectors.ModelParameterSelector
-keys:
+modules:
   - encoder
