--- a/moai/conf/model/parameters/groups/generator.yaml
+++ b/moai/conf/model/parameters/groups/generator.yaml
@@ -1,5 +1,5 @@
 # @package model.parameters.groups.generator
 
 _target_: moai.parameters.selectors.ModelParameterSelector
-keys:
+modules:
   - generator
