--- a/moai/conf/examples/smplifyx/objective.yaml
+++ b/moai/conf/examples/smplifyx/objective.yaml
@@ -120,52 +120,52 @@ model:
             #   max_iter: 30
             #   lr: 1.0
             selectors: [expressive]
-      objectives:
-        initial_torso_fit:
-          # iterations: 30
-          # optimizer: lbfgsls
-          # selectors: global
-          # objective:
-            L2:
-              gt: [torso_keypoints, init_trans]
-              pred: [torso_joints2d, translation]
-              mask: [null, z_mask]
-              weight: [0.0625, 10000]
-              reduction: [sum, sum]
-              out: [L2_torso, L2_z]
-        fine_fit_stage1:
-          # iterations: 30
-          # optimizer: lbfgsls
-          # selectors: [expressive]
-          # scheduler: null
-          # objective:
-            gm:
-              gt: [split_keypoints.body, split_keypoints.face, split_keypoints.hands]
-              pred: [split_joints2d.body, split_joints2d.face, split_joints2d.hands]
-              weights: [split_confidence.body, split_confidence.face, split_confidence.hands]
-              reduction: [sum, sum, sum] 
-              weight: 
-                - ${smplifyx.W.S1.w_joint}
-                - ${smplifyx.W.S1.w_face}
-                - ${smplifyx.W.S1.w_hand}
-              out: [gm_j2d, gm_face, gm_hands]
-            L2:
-              # gt: [null]
-              pred: [embedding, body.betas, body.left_hand, body.right_hand, body.expression, body.jaw]
-              reduction: [sum, sum, sum, sum, sum, sum]              
-              weight: 
-                - ${smplifyx.W.S1.w_pose}
-                - ${smplifyx.W.S1.w_shape}
-                - ${smplifyx.W.S1.w_hand_s}
-                - ${smplifyx.W.S1.w_hand_s}
-                - ${smplifyx.W.S1.w_exp_s}
-                - ${smplifyx.W.S1.w_jaw_s}
-              out: [vposer, shape, lhand, rhand, expr, jaw]
-            hinge_joint_prior:
-              pose: [body.expressive]
-              out: [bend]
-              weight: 
-                - ${smplifyx.W.S1.w_bend}
+      # objectives:
+      #   initial_torso_fit:
+      #     # iterations: 30
+      #     # optimizer: lbfgsls
+      #     # selectors: global
+      #     # objective:
+      #       L2:
+      #         gt: [torso_keypoints, init_trans]
+      #         pred: [torso_joints2d, translation]
+      #         mask: [null, z_mask]
+      #         weight: [0.0625, 10000]
+      #         reduction: [sum, sum]
+      #         out: [L2_torso, L2_z]
+      #   fine_fit_stage1:
+      #     # iterations: 30
+      #     # optimizer: lbfgsls
+      #     # selectors: [expressive]
+      #     # scheduler: null
+      #     # objective:
+      #       gm:
+      #         gt: [split_keypoints.body, split_keypoints.face, split_keypoints.hands]
+      #         pred: [split_joints2d.body, split_joints2d.face, split_joints2d.hands]
+      #         weights: [split_confidence.body, split_confidence.face, split_confidence.hands]
+      #         reduction: [sum, sum, sum] 
+      #         weight: 
+      #           - ${smplifyx.W.S1.w_joint}
+      #           - ${smplifyx.W.S1.w_face}
+      #           - ${smplifyx.W.S1.w_hand}
+      #         out: [gm_j2d, gm_face, gm_hands]
+      #       L2:
+      #         # gt: [null]
+      #         pred: [embedding, body.betas, body.left_hand, body.right_hand, body.expression, body.jaw]
+      #         reduction: [sum, sum, sum, sum, sum, sum]              
+      #         weight: 
+      #           - ${smplifyx.W.S1.w_pose}
+      #           - ${smplifyx.W.S1.w_shape}
+      #           - ${smplifyx.W.S1.w_hand_s}
+      #           - ${smplifyx.W.S1.w_hand_s}
+      #           - ${smplifyx.W.S1.w_exp_s}
+      #           - ${smplifyx.W.S1.w_jaw_s}
+      #         out: [vposer, shape, lhand, rhand, expr, jaw]
+      #       hinge_joint_prior:
+      #         pose: [body.expressive]
+      #         out: [bend]
+      #         weight: 
+      #           - ${smplifyx.W.S1.w_bend}
         # fine_fit_stage2:
         #   # iterations: 30
         #   # optimizer: lbfgsls
