--- a/moai/conf/model/parameters/groups/human/body/expressive.yaml
+++ b/moai/conf/model/parameters/groups/human/body/expressive.yaml
@@ -1,6 +1,6 @@
 # @package model.parameters.groups.expressive
 
-_target_: moai.parameters.selectors.MonadParameterSelector
-keys:
-  - graphs.preprocess.smplx
-  - graphs.preprocess.embedding
+_target_: moai.parameters.selectors.model.ModelParameterSelector
+monads:
+  - preprocess.smplx
+  - preprocess.embedding
