cleanup: obsolete code

--- a/moai/conf/examples/smplifyx/fit.yaml
+++ b/moai/conf/examples/smplifyx/fit.yaml
@@ -3,8 +3,6 @@ defaults:
   - engine/runner: lightning
   - engine/modules: [manual_seed, rerun]
   - engine/loggers: tabular
-  - engine/monitors/exporting/local: [pkl, append_pkl]
-  - engine/monitors/visualization/rerun: [mesh, mesh3d]
   
   # ###### DATA  
   - data/train/loader: torch
@@ -23,19 +21,19 @@ defaults:
   - data/val/dataset/human/pose: openpose
 
   # ###### MODEL 
-  - model: moai # manual
+  - model: moai
   - model/monads/human/body: [initialize_translation, smplx]
   - model/monads/human/body/prior: vposer2
   - model/monads/masking: [index, binary]  
   - model/monads/geometry/projection: weak_perspective_camera
   - model/monads/human/pose/openpose: split
 
-  - model/modifications: forward_mode
-
   - examples/smplifyx/embedding
   - examples/smplifyx/translation
   - examples/smplifyx/betas
   
+  - model/modifications: forward_mode
+
   - model/_parameters/initialization: cascade
   - model/_parameters/initialization/custom: vposer2
   - model/_parameters/initialization/scheme: zero_params
@@ -49,6 +47,9 @@ defaults:
   - model/objectives/mesh: interpenetration
 
   - model/metrics: rmse
+
+  - model/monitors/exporting/local: [pkl, append_pkl]
+  - model/monitors/visualization/rerun: [mesh, mesh3d]
 
   - data
   - options
