fix (config) minor fixes in accessing ModelParameterSelector

--- a/moai/conf/model/parameters/groups/discriminator.yaml
+++ b/moai/conf/model/parameters/groups/discriminator.yaml
@@ -1,5 +1,5 @@
 # @package model.parameters.groups.discriminator
 
-_target_: moai.parameters.selectors.ModelParameterSelector
+_target_: moai.parameters.selectors.model.ModelParameterSelector
 modules:
   - discriminator
