--- a/moai/conf/model/parameters/groups/model.yaml
+++ b/moai/conf/model/parameters/groups/model.yaml
@@ -1,6 +1,6 @@
 # @package model.parameters.groups.model
 
-_target_: moai.parameters.selectors.ModelParameterSelector
+_target_: moai.parameters.selectors.model.ModelParameterSelector
 modules: null # optional
 monads: null # optional
 parameters: null # optional
