--- a/moai/conf/examples/MNIST/monitor.yaml
+++ b/moai/conf/examples/MNIST/monitor.yaml
@@ -1,8 +1,18 @@
 # @package _global_
 
-model:
-  monitors:
-    metrics:
+_moai_:
+  _collections_:
+    _monitors_:
+      save_image_batch:
+        image2d:
+          modality: [color] # or depth
+          colormap: [none] # bone, etc.
+          transform: [none] # minmax, etc.
+          mode: [overwrite] # [all, overwrite]
+          key: [color]
+          path: .
+          extension: [png] # [png, exr, jpg]
+    _metrics_:
       test_class_acc:
         multiclass_acc:
           # gt: [label]
@@ -19,16 +29,27 @@ model:
           target: [predicted_label]
           preds: [predicted_label]
           out: [accuracy]
-    tensors:
-      save_image_batch:
-        image2d:
-          modality: [color] # or depth
-          colormap: [none] # bone, etc.
-          transform: [none] # minmax, etc.
-          mode: [overwrite] # [all, overwrite]
-          key: [color]
-          path: .
-          extension: [png] # [png, exr, jpg]
+  _monitoring_:
+    fit:
+      batch:
+        train_encoder:
+          frequency: 1
+          steps: []
+    val:
+      batch:
+        train_encoder:
+          metrics:
+            - test_class_acc
+    test:
+      batch:
+        metrics:
+          - test_class_acc
+    predict:
+      batch:
+        metrics:
+          - predict_class_acc
+        tensors: # used for visualization & exporting
+          - save_image_batch
         
       
     # tensors:
