wip: update metrics

--- a/moai/conf/examples/smplifyx/monitoring.yaml
+++ b/moai/conf/examples/smplifyx/monitoring.yaml
@@ -64,6 +64,7 @@ _moai_:
         rmse:
           gt: [keypoints]
           pred: [joints2d]
+          out: [rmse]
   _monitoring_:
     fit:
       step:
