--- a/moai/conf/examples/smplifyx/optimization.yaml
+++ b/moai/conf/examples/smplifyx/optimization.yaml
@@ -21,5 +21,5 @@ _moai_:
         rmse:
           # gt: [keypoints]
           # pred: [joints2d]
-          rmse: [metrics.rmse]
+          rmse: [rmse]
           threshold: [10000.3] # pixels
