feat: update intializers logic

--- a/moai/conf/examples/MNIST/main.yaml
+++ b/moai/conf/examples/MNIST/main.yaml
@@ -41,7 +41,7 @@ defaults:
 
 
   # ###### PARAMETERS
-  - model/_parameters/initialization: default
+  - model/parameters/initializers: [default, pretrained]
   - model/parameters/optimizers: adam
   # - model/parameters/optimization/scheduling: single
   # - model/parameters/optimization/scheduling/scheduler: step
