--- a/moai/conf/examples/MNIST/processes_flow.yaml
+++ b/moai/conf/examples/MNIST/processes_flow.yaml
@@ -1,6 +1,15 @@
 # @package _global_
 
 _moai_:
+  _init_:  # responsible for initializers
+    fit:
+      setup: [default] # used only at the beginning of the training process
+      # batch: [default] # used at the beginning of each batch
+      # epoch: [default] # used at the beginning of each epoch
+    test:
+      setup: [pretrained]
+    predict:
+      setup: [pretrained]
   _flows_: # that will be used in the main process
     encoder:
       input: [color]
