--- a/moai/conf/examples/MNIST/processes_flow.yaml
+++ b/moai/conf/examples/MNIST/processes_flow.yaml
@@ -7,9 +7,9 @@ _moai_:
       # batch: [default] # used at the beginning of each batch
       # epoch: [default] # used at the beginning of each epoch
     test:
-      setup: [pretrained]
+      setup: pretrained
     predict:
-      setup: [pretrained]
+      setup: pretrained
   _flows_: # that will be used in the main process
     encoder:
       input: [color]
