--- a/moai/conf/model/monads/math/deg2rad.yaml
+++ b/moai/conf/model/monads/math/deg2rad.yaml
@@ -1,3 +1,3 @@
-# @package model.monads._name_
+# @package model.monads.deg2rad
 
-_target_: moai.monads.math.Deg2Rad
+_target_: moai.monads.math.common.Deg2Rad
