--- a/moai/conf/model/monads/sampling/interpolate.yaml
+++ b/moai/conf/model/monads/sampling/interpolate.yaml
@@ -1,6 +1,6 @@
-# @package model.monads._name_
+# @package model.monads.interpolate
 
-_target_: moai.monads.sampling.Interpolate
+_target_: moai.monads.sampling.torch.interpolate.Interpolate
 scale: 0.0 # 0 means invalid, either scale or dims need to be set
 width: -1  # -1 means invalid, either scale or dims need to be set
 height: -1 # -1 means invalid, either scale or dims need to be set
